# ev-charging-simulator

./: Dockerfile  README.md  eda.py  main.py  pyproject.toml
data/: charge_path.csv  schedule.csv
templates/: index.html
