[tool.poetry]
name = "ev-charging-simulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ev_charging_simulator"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
uvicorn = "^0.30.6"
fastapi = "^0.112.1"
matplotlib = "^3.9.2"
jinja2 = "^3.1.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
